# nabis_dash_board

./: .gitignore  README.md  analyze_dataset.py  app.py  build_dashboard_data.py  download_nabis_index.py  find_city_with_gu.py  parse_nabis.py  parse_nabis2.py  prepare_dashboard_data.py  process_shapefile.py  pyproject.toml  requirements.txt  scrape_nabis_api.py  scrape_nabis_data.py
build_messages/: layout-antigravity.md  layout.md
compact_messages/: 20260222-nabis-dashboard-data-builder.md  20260222-nabis-excel-downloader.md  20260223-nabis-dashboard-implementation.md  20260223-nabis-dashboard-ui-refinements.md
datasets/index2025-claude/강원특별자치도/: 강릉시.xls  강원특별자치도.xls  고성군.xls  동해시.xls  삼척시.xls  속초시.xls  양구군.xls  양양군.xls  영월군.xls  원주시.xls  인제군.xls  정선군.xls  철원군.xls  춘천시.xls  태백시.xls  평창군.xls  홍천군.xls  화천군.xls  횡성군.xls
datasets/index2025-claude/경기도/: 가평군.xls  경기도.xls  고양시.xls  과천시.xls  광명시.xls  광주시.xls  구리시.xls  군포시.xls  김포시.xls  남양주시.xls  동두천시.xls  부천시.xls  성남시.xls  수원시.xls  시흥시.xls  안산시.xls  안성시.xls  안양시.xls  양주시.xls  양평군.xls  여주시.xls  연천군.xls  오산시.xls  용인시.xls  의왕시.xls  의정부시.xls  이천시.xls  파주시.xls  평택시.xls  포천시.xls  하남시.xls  화성시.xls
datasets/processed/: geo_sgg_4326.json  geo_sido_4326.json  indicator_catalog.json  region_hierarchy.json
datasets/shapefile/: 센서스 공간정보 지역 코드.xlsx
implementation_plan/: claude-code-implementation-plan-20260223.md
process/: 20260220_status_report.md
report/: 20260222-process.md  NABIS_index_download_claude.md  index_data_structure.md  nabis_indicator_navigation_report.md  nabis_page_analysis.md  shapefile_analysis.md
(+195 files in other folders)
